tests/examples/manifests/dc-label.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: example-dc
  labels:
    app: httpd
    app.kubernetes.io/instance: example-dc
    app.kubernetes.io/managed-by: console
    app.kubernetes.io/managed-by-version: v4.8.0
    app.kubernetes.io/name: example-dc
    app.kubernetes.io/part-of: httpd
spec:
  selector:
    app: httpd
  replicas: 1
  template:
    metadata:
      labels:
        app: httpd
        app.kubernetes.io/instance: example-dc
        app.kubernetes.io/managed-by: console
        app.kubernetes.io/managed-by-version: v4.8.0
        app.kubernetes.io/name: example-dc
        app.kubernetes.io/part-of: httpd
    spec:
      containers:
        - name: httpd
          image: >-
            image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest
          ports:
            - containerPort: 8080
